Deprecate cycle lite. Move to cycle2. Fix CSS issue with faders not working on IE or FF.

--- a/css/kandt.css
+++ b/css/kandt.css
@@ -14,6 +14,11 @@
     position: relative;
 }
 
+.cycle_img_div {
+    height:150px;
+    width:150px;
+}
+
 .cycle_img {
     position: absolute;
     top: 0px;
